Integrate Angular ESLint for improved code quality and add linting configuration. Update package dependencies and enhance documentation with additional details on architecture and performance. Refactor components to utilize new syntax and improve readability.

--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,18 @@
           "options": {
             "buildTarget": "enterprise-angular-architecture:build"
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false,
+    "schematicCollections": ["angular-eslint"]
   }
 }
