--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@angular/cli": "^17.3.0",
     "@angular/compiler-cli": "^17.3.0",
     "@types/node": "^20.11.30",
+    "angular-eslint": "21.0.1",
+    "eslint": "^9.39.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "8.46.4"
   }
 }
