--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "e2e": "playwright test"
   },
   "dependencies": {
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/router": "^17.3.0",
     "rxjs": "^7.8.1",
@@ -24,9 +27,13 @@
     "@angular-devkit/build-angular": "^17.3.0",
     "@angular/cli": "^17.3.0",
     "@angular/compiler-cli": "^17.3.0",
-    "@types/node": "^20.11.30",
+    "@playwright/test": "^1.49.1",
+    "@jest/core": "^29.7.0",
+    "@types/jest": "^29.5.14",
     "angular-eslint": "21.0.1",
     "eslint": "^9.39.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
     "typescript-eslint": "8.46.4"
